build: Add 'composer serve' command and document local dev
* Launches built-in PHP web server with custom config via ENV.
* Disables composer process timeout, which otherwise stops the server
  after a few minutes.
* Binds to 0.0.0.0 instead of localhost, so that it is also reachable
  from e.g. PHP in mediawiki-docker as host.docker.internal:4000.

Also include a ready-to-use config file and document how to set up
the local database.

Change-Id: I610638b53794ceedae013661eef59070901ad9ba

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/vendor/
+# Development
 /.idea
 *.kate-swp
 *~
@@ -6,9 +6,15 @@
 .#*
 .*.swp
 .project
-cscope.files
-cscope.out
 *.orig
 sublime-*
 sftp-config.json
 *.vscode/
+
+# Install
+/config/config.json
+/vendor/
+
+# Usage
+cscope.files
+cscope.out
