build: Ensure PHP 7.3 compat
The server uses libapache2-mod-php, which at least in Beta runs Buster
with PHP 7.3. Fix syntax error until next upgrade.

Change-Id: Idb631859a60a46341401611b69f39b0358936592

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Excimer UI server",
 	"license": "Apache-2.0",
 	"require": {
-		"php": ">=7.4",
+		"php": ">=7.3",
 		"ext-curl": "*",
 		"ext-json": "*",
 		"ext-pdo": "*",
@@ -22,6 +22,11 @@
 	"autoload": {
 		"psr-4": {
 			"Wikimedia\\ExcimerUI\\Server\\": "src/"
+		}
+	},
+	"config": {
+		"platform": {
+			"php": "7.3.31"
 		}
 	},
 	"scripts": {
