--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		"ext-json": "*",
 		"ext-pdo": "*",
 		"ext-zlib":  "*",
-		"guzzlehttp/guzzle": "^7.2.0",
+		"guzzlehttp/psr7": "^2.5.0",
 		"psr/log": "~1.1.3",
 		"monolog/monolog": "^2.0.0"
 	},
