--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,7 @@
 		"ext-json": "*",
 		"ext-pdo": "*",
 		"ext-zlib":  "*",
-		"guzzlehttp/psr7": "^2.5.0",
-		"psr/log": "~1.1.3",
-		"monolog/monolog": "^2.0.0"
+		"guzzlehttp/psr7": "^2.5.0"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "38.0.0",
