Remove guzzlehttp/psr7 dependency
This allows the repo to be git-submodule linked into performance/docroot
similar to how excimer-ui-client is submoduled into wmf-config.

Given the PHP 7.3+ requirement, we can use built-ins for this, without
boilerplate or custom logic to maintain.

Change-Id: I94a7bd7f1ab681c41adf771767309fdb396dad79

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
 		"ext-curl": "*",
 		"ext-json": "*",
 		"ext-pdo": "*",
-		"ext-zlib":  "*",
-		"guzzlehttp/psr7": "^2.5.0"
+		"ext-zlib":  "*"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "38.0.0",
